--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react-addons-update": "^15.6.0",
     "react-dom": "^15.5.4",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-throttle": "^0.3.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
